created model for database, and was able to query results in python shell for my user and posts objects. Commands are all in the README file

--- a/blog/static/blog/main.css
+++ b/blog/static/blog/main.css
@@ -87,3 +87,11 @@ a.article-title:hover {
 .account-heading {
     font-size: 2.5rem;
 }
+
+.alignleft {
+    float: left;
+}
+
+.alignright {
+    float: right;
+}
