--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,12 @@
- {% extends "blog/base.html" %} {% load crispy_forms_tags %} {% block content %}
+{% extends "blog/base.html" %} {% load crispy_forms_tags %} {% block content %}
 <div class="content-section">
     <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         <div class="media-body">
             <h2 class="account-heading">{{ user.username }}</h2>
             <p class="text-secondary">{{ user.email }}</p>
+            <p class="text-secondary">{{ user.profile.gradeLevel }}</p>
+            <p class="text-secondary">{{ user.profile.major }}</p>
         </div>
     </div>
     <!-- FORM HERE -->
