--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -5,8 +5,7 @@
         <div class="media-body">
             <h2 class="account-heading">{{ user.username }}</h2>
             <p class="text-secondary">{{ user.email }}</p>
-            <p class="text-secondary">{{ user.profile.gradeLevel }}</p>
-            <p class="text-secondary">{{ user.profile.major }}</p>
+            <p class="text-secondary">{{ user.profile.jobTitle }}</p>
         </div>
     </div>
     <form method="POST" enctype="multipart/form-data">
